# antigravity-proxy

./: CMakeLists.txt  README.md  README_EN.md  build.ps1
.github/workflows/: release.yml
.sanshu-memory/: memories.json  metadata.json
.sanshu-memory/backup/: context.md  preferences.md  rules.md
build-x64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  antigravity-proxy.sln  cmake_install.cmake  version.vcxproj  version.vcxproj.filters
docs/: feature-gap-analysis.md
src/: main.cpp
src/core/: Config.hpp  Logger.hpp
src/hooks/: Hooks.cpp
src/injection/: ProcessInjector.hpp
src/network/: FakeIP.hpp  HttpConnect.hpp  SocketIo.hpp  Socks5.hpp
src/proxy/: VersionProxy.cpp  version.def
tools/config-web/: app.js  index.html  style.css
